# Owl

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
cmd/: main.go  server.go  version.go
migrations/: 20240801164101_owl.sql
owl/: Cargo.toml
owl-db/: Cargo.toml
owl-db/src/: lib.rs
owl-db/src/database/: mod.rs
owl-db/src/database/sqlite/: folder.rs  mod.rs
owl-db/src/model/: folder.rs  mod.rs
owl-store/: Cargo.toml
owl-store/src/: lib.rs  storage.rs
owl/src/: cli.rs  config.rs  main.rs  router.rs  state.rs
owl/src/handler/: folder.rs  mod.rs  ping.rs  response.rs
server/db/: init.go
server/db/database/: driver.go
server/db/sqlite/: file.go  file_tag.go  folder.go  folder_test.go  label.go  movie_actor.go  movie_test.go  sqlite.go  sqlite_test.go  tag.go
server/db/sqlite/migrations/: 20241009_init.down.sql  20241009_init.up.sql
server/di/: app.go  wire.go  wire_gen.go
server/handler/: file.go  file_tag.go  folder.go  image.go  init.go  label.go  ping.go  tag.go
server/middleware/: init.go
server/model/: file.go  file_tag.go  folder.go  label.go
server/router/: init.go
server/service/: file.go  file_tag.go  folder.go  init.go  label.go  ping.go  tag.go
server/storage/: init.go  local.go  minio.go
utils/: config.go
web/: embed.go
