[workspace]
members = ["owl", "owl-db", "owl-store"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25" }
napi = { version = "2", default-features = false, features = [
    "napi8",
    "async",
    "tokio_rt",
    "chrono_date",
] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "derive",
    "migrate",
    "chrono",
] }
thiserror = { version = "2" }
utoipa = { version = "5", features = ["axum_extras"] }
walkdir = "2"
