[package]
name = "owl-db"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4" }
chrono = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
